left bar, image gallery, edit button for club profile, myClubs is now done

--- a/client/src/components/imageBlock/imageBlock.scss
+++ b/client/src/components/imageBlock/imageBlock.scss
@@ -1,12 +1,11 @@
-.image-gallery {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-    grid-gap: 10px;
+.image-blocks {
+    width: 300px; /* Set your desired width */
+    height: 200px; /* Set your desired height */
+    overflow: hidden; /* Ensure that the image is cropped */
 }
 
-.image-gallery img {
+.image-blocks img {
     width: 100%;
-    height: auto;
-    border-radius: 5px;
-    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1);
+    height: 100%;
+    object-fit: cover; /* Crop the image to cover the container */
 }
