--- a/client/src/pages/profile/profile.scss
+++ b/client/src/pages/profile/profile.scss
@@ -15,7 +15,7 @@
             align-items: flex-start;
            
 
-            .images {
+            .images-profile{
                 width: 100%;
                 height: 60%;
                 position: relative;
