--- a/client/src/components/navbar/navbar.scss
+++ b/client/src/components/navbar/navbar.scss
@@ -16,19 +16,22 @@
     .left{
         display: flex;
         align-items: center;
-        gap: 30px;
+        gap: 15px;
 
-        span{
+      
+        span{  
+          
             font-weight: bold;
             font-size: 20px;
             color: black;
             font-family: 'Arial Black', sans-serif;
-            font-size: 30px;
+            font-size: 25px;
         }
         
 
         .logo{
             font-family: 'Arial Black', sans-serif;
+ 
         }
 
 
@@ -39,7 +42,8 @@
             gap: 10px;
             border-radius: 5px;
             padding: 5px;
-            width: 780px;
+        
+            width: 730px;
             background-color: white;
             height: 20px; 
 
@@ -58,14 +62,19 @@
         display: flex;
         align-items: center;
         gap: 20px;
+        
 
+        svg{
+            font-size:30px;
+        }
+      
         .user{
             display: flex;
             align-items: center;
             gap: 10px;
             font-family: Verdana, Geneva, Tahoma, sans-serif;
             font-weight: bold;
-            color: black;
+            color: rgb(0, 0, 0);
             
             img{
                 width: 30px;
@@ -74,7 +83,23 @@
                 object-fit: cover;
             }
 
-           
+            
+        }
+
+        .Logout{
+            background-color: rgb(129, 33, 33);
+            width:70px;
+            border-radius:5px;
+            text-align:center;
+          
+            p{
+                color:white;
+                text-decoration: none;
+                font-family: Verdana, Geneva, Tahoma, sans-serif;
+                font-size:13px;
+               
+            }
+    
         }
     }
 }
