--- a/client/src/components/post/post.scss
+++ b/client/src/components/post/post.scss
@@ -7,6 +7,8 @@
     border-radius: 10px;
     margin-top: 10px;
 
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+
 
     .container{
         padding: 20px;
@@ -18,6 +20,7 @@
 
             .userInfo{
                 display:flex;
+                flex-direction: column;
                 gap: 20px;
                 img{
                     width: 40px;
@@ -28,16 +31,32 @@
 
                 .details{
                     display: flex;
-                    flex-direction: column;
+                    flex-direction: row;
+                    align-items: center;
+                    gap:10px;
 
+                    Link{
+                        text-decoration: none;
+                    }
+                    
                     .name{
-                        font-weight: 500;;
+                        font-weight: 500;
+
                     }
-                    .date{
-                        font-size: 12px;
-                    }
+
                 }
+                
+                .date{
+                        
+                        font-size: 12px;
+                    
+                    }
             }
+        }
+
+        .title{
+            font-family:Arial black;
+            font-size: 30px;
         }
 
         .content{
