--- a/client/src/pages/profile/profile.scss
+++ b/client/src/pages/profile/profile.scss
@@ -9,36 +9,42 @@
         margin-right: auto;
 
         .user-Info {
-            height: 500px;
+            height: 380px;
             display: flex;
-            flex-direction: column;
-            align-items: flex-start;
+            flex-direction: row;
+            justify-content: flex-start;
            
-
+               
             .images-profile{
                 width: 100%;
                 height: 60%;
                 position: relative;
+                flex-shrink:0;
 
-                .cover {
+                 .cover {
                     width: 100%;
                     height: 100%;
                     object-fit: cover;
                 }
 
-                .profilePic {
-                    margin-top: 180px;
-                    width: 200px; /* Adjust size as needed */
-                    height: 200px; /* Adjust size as needed */
-                    border-radius: 50%;
-                    object-fit: cover;
-                    position: absolute;
-                    left: 50%;
-                    top: 25%;
-                    transform: translate(-50%, -50%);
-                    border: 5px solid white;
-                    z-index: 5;
-                }
+    
+                    
+                    .profilePic {
+                        margin-top: 180px;
+                        width: 200px; /* Adjust size as needed */
+                        height: 200px; /* Adjust size as needed */
+                        border-radius: 50%;
+                        object-fit: cover;
+                        position: absolute;
+                        left: 50%;
+                        top: 25%;
+                        transform: translate(-50%, -50%);
+                        border:8px solid white;
+                        z-index: 5;
+                    }
+
+                
+                
 
                 .topRight {
                     position: absolute;
@@ -47,44 +53,57 @@
 
                     button{
                         margin-top:20px;
-                        background-color: rgb(90, 96, 96);
-                        width:150px;
+                        background-color: rgb(161, 25, 25);
+                        width:130px;
                         height:40px;
                         font-family: Verdana, Geneva, Tahoma, sans-serif;
                         font-size: 20px;
                         border:none;
                         color:white;
                         cursor:pointer;
+                        border-radius: 5px;
 
                         &:hover{
-                            background-color: rgb(105, 108, 108);
+                            background-color: rgb(182, 31, 31);
                         }
                     }
 
                    
-                }
-            }
-
-            .left-bottom {
-                padding: 20px;
-                margin-top: 50px; /* Adjust margin as needed */
-                margin-right:20px;
+                } 
                 
-                .name {
-                    font-size: 40px;
-                    font-weight: bold;
-                    font-family: Arial Black;
+                .left-bottom {
+                    padding: 10px;
+                    margin-top: 10px; /* Adjust margin as needed */
+                    margin-right:auto;
+                    margin-left:auto; 
 
-                }
+                    background-color: rgb(45, 110, 77);;
+                    width: 950px; /* Adjust width as needed */
+                   
+                    box-shadow: 0px 0px 25px -10px rgba(0, 0, 0, 0.38);
+                    border-radius: 2px;
+                    color: rgb(255, 255, 255);
+                    
+                    .name {
+                        
+                        font-size: 40px;
+                        font-weight: bold;
+                        font-family: Arial black;
+                        
 
-                .subtitle {
-                    display: flex;
-                    align-items: center;
-                    font-size:15px;
-                    font-family: Verdana, Geneva, Tahoma, sans-serif
-                }   
+                    }
+
+                    .subtitle {
+                        display: flex;
+                        align-items: center;
+                        font-size:15px;
+                        font-family: Verdana, Geneva, Tahoma, sans-serif
+                    }   
 
             }
+            }
+
+           
 
         }
 
