--- a/client/src/components/club/club.scss
+++ b/client/src/components/club/club.scss
@@ -39,6 +39,8 @@
                 img {
                     margin-left: 15px;
                     width: 360px;
+                    height: 220px;
+                    overflow: hidden;
                 }
             }
         }
