--- a/client/src/components/leftbar/leftbar.scss
+++ b/client/src/components/leftbar/leftbar.scss
@@ -46,6 +46,10 @@
                     font-size: 15px;
                     font-family: Verdana, Geneva, Tahoma, sans-serif;
                     font-weight: bold;
+                    a, a:hover, a:focus, a:active {
+                        color: inherit;
+                        text-decoration: none;
+                    }
 
                     .link-name{
                         color:black; 
