--- a/client/src/components/event/event.scss
+++ b/client/src/components/event/event.scss
@@ -31,6 +31,8 @@
 
                 img {
                     width: 260px;
+                    height: 173px;
+                    overflow: hidden;
                 }
             }
         }
